[project]
name = "crewai-devtools"
dynamic = ["version"]
description = "Development tools for version bumping and git automation"
readme = "README.md"
authors = [
    { name = "Greyson R. LaLonde", email = "greyson@crewai.com" },
]
requires-python = ">=3.10, <3.14"
classifiers = ["Private :: Do Not Upload"]
private = true
dependencies = [
    "click~=8.1.7",
    "tomlkit~=0.13.2",
    "openai>=1.83.0,<3",
    "python-dotenv>=1.2.2,<2",
    "pygithub~=1.59.1",
    "rich>=13.9.4",
]

[project.scripts]
bump-version = "crewai_devtools.cli:bump"
tag = "crewai_devtools.cli:tag"
release = "crewai_devtools.cli:release"
docs-check = "crewai_devtools.docs_check:docs_check"
devtools = "crewai_devtools.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--noconftest"

[tool.uv]
exclude-newer = "3 days"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/crewai_devtools/__init__.py"

