[project]
name = "crewai-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Greyson LaLonde", email = "greyson.r.lalonde@gmail.com" }
]
requires-python = ">=3.10, <3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
