[tool.poetry]
name = "{{folder_name}}"
version = "0.1.0"
description = "{{name}} using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.22.2"}

[tool.poetry.scripts]
{{folder_name}} = "{{folder_name}}.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"