[project]
name = "{{folder_name}}"
version = "0.1.0"
description = "{{name}} using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.74.2,<1.0.0",
    "asyncio"
]

[project.scripts]
flows_kickoff_cli = "flows_kickoff_cli.main:main"
kickoff = "flows_kickoff_cli.main:main"
plot = "flows_kickoff_cli.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
