[tool.poetry]
name = "{{folder_name}}"
version = "0.1.0"
description = "{{name}} using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
#crewai = { extras = ["tools"], version = "^0.41.1" }
crewai = { extras = ["tools"], path = "/Users/brandonhancock/Code/crewai/crewAI" }
asyncio = "*"

[tool.poetry.scripts]
{{folder_name}} = "{{folder_name}}.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"