[project]
name = "{{folder_name}}"
version = "0.1.0"
description = "{{name}} using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.8a2"
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = ["crews", "tools", "knowledge", "skills"]
source-include = ["flow.yaml"]

[tool.crewai]
type = "flow"
definition = "flow.yaml"
